회원가입 요청 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -13,11 +13,12 @@
             <div class="login-wrap">
                 <div class="login-html">
                     <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
-                    <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+                    <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">
+                        <a href="/register">Sign Up</a></label>
                     <div class="login-form">
                         <div class="sign-in-htm">
                             <div class="group">
-                                <label for="user" class="label">Username</label>
+                                <label for="user" class="label">Id</label>
                                 <input id="id" type="text" class="input">
                             </div>
                             <div class="group">
@@ -30,32 +31,32 @@
                             </div>
                             <div class="group">
                                 
-                                <button type="submit" class="button" value="Sign In">Sign In</button>
+                                <p type="submit" id="btn" class="button" value="Sign In">Sign In</p>
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="/register">Create an account</a>
                             </div>
                         </div>
                         <div class="sign-up-htm">
                             <div class="group">
-                                <label for="user" class="label">Username</label>
-                                <input id="user" type="text" class="input">
+                                <label for="user" class="label">Id</label>
+                                <input type="text" class="input">
+                            </div>
+                            <div class="group">
+                                <label for="pass" class="label">User Name</label>
+                                <input type="text" class="input">
                             </div>
                             <div class="group">
                                 <label for="pass" class="label">Password</label>
-                                <input id="pass" type="password" class="input" data-type="password">
+                                <input type="password" class="input" data-type="password">
                             </div>
                             <div class="group">
                                 <label for="pass" class="label">Repeat Password</label>
-                                <input id="pass" type="password" class="input" data-type="password">
+                                <input type="password" class="input" data-type="password">
                             </div>
                             <div class="group">
-                                <label for="pass" class="label">Email Address</label>
-                                <input id="pass" type="text" class="input">
-                            </div>
-                            <div class="group">
-                                <input type="submit" class="button" value="Sign Up">
+                                <p type="submit" class="button" value="Sign Up">Sign Up</p>
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
