--- a/app/src/public/css/home/login.css
+++ b/app/src/public/css/home/login.css
@@ -81,6 +81,7 @@ a{color:inherit;text-decoration:none}
 	padding:15px 20px;
 	border-radius:25px;
 	background:rgba(255,255,255,.1);
+	cursor: pointer;
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
