일단은 대충 끼워 맞춤

--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -6,7 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     </head>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <body>
-    여기는 루트입니다.
+        <div class="wrap">        
+            <div class="intro_bg">
+                <div class="header">
+                    <ul class="nav">
+                        <div id="logo">
+                            <img src="./img/logo1.png">
+                        </div>
+                        <li><a href="/register">로그인</a></li>
+                        <li><a href="#submain1">미리보기</a></li>
+                        <li><a href="#submain2">설치하기</a></li>
+                    </ul>
+                    </div>
+    
+                    <div class="intro_text">
+                            <span class="h1">우리만의 특별한 광주로,<br>
+                            WOWBRO</span>
+                            <span class="h4">   : 당신의 완벽한 광주 여행을 위하여<br></span>
+                            <img id="sel" src="./img/selphone.png">
+                            <a href="https://play.google.com/store/apps"><img id="down" src="img/download.png"></a>
+                                                
+                </div>
+    
+                <div class="main_text0" id="main_text0">
+                    <h1 id="submain1">미리보기</h1>
+                    <ul class="imgs">
+                        <li>
+                            <div id="tuto">
+                                <img src="./img/pftotu1.png">
+                            </div>
+                        </li>
+                        <li>
+                            <div id="tuto">
+                                <img src="./img/pftotu2.png">
+                            </div>
+                        </li>
+                        <li>
+                            <div id="tuto">
+                                <img src="./img/pftotu3.png">
+                            </div>
+                        </li>
+                        <li>
+                            <div id="tuto">
+                                <img src="./img/pftuto5.png">
+                            </div>
+                        </li>
+        
+                    </ul>
+    
+                </div>
+                <div class="main_text1">
+            <h1 id="submain2">설치하기</h1>
+            <div class="install">
+                <div class="download_1">
+                    <a href="https://play.google.com/store/apps"><img src="./img/download.png"></a>               
+                </div>
+                <div class="download_2">
+                    <img src="./img/download2.png">
+                </div>
+            </div>
+        </div>    
+            </div>
+        </div>       
     </body>
     </html>
