--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,67 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/home/login.css">
+    <link rel="stylesheet" href="/css/home/style1.css">
     <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="login-wrap">
-        <div class="login-html">
-            <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">
-                <a href="/login">Sign In</a></label>
-            <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-            <div class="login-form">  
-                <div class="sign-in-htm">
-                    <div class="group">
-                        <label for="user" class="label">Id</label>
-                        <input type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input type="password" class="input" data-type="password">
-                    </div>
-                    <div class="group">
-                        <input id="check" type="checkbox" class="check" checked>
-                        <label for="check"><span class="icon"></span> Keep me Signed in</label>
-                    </div>
-                    <div class="group">
-                        
-                        <p type="submit" class="button" value="Sign In">Sign In</p>
-                    </div>
-                    <div class="hr"></div>
-                    <div class="foot-lnk">
-                        <a href="/register">Create an account</a>
-                    </div>
-                </div> 
-                <div class="sign-up-htm">
-                    <div class="group">
-                        <label for="user" class="label">Id</label>
-                        <input id="id" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">User Name</label>
-                        <input id="name" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="psword" type="password" class="input" data-type="password">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">Repeat Password</label>
-                        <input id="confirm-psword" type="password" class="input" data-type="password">
-                    </div>
-                    <div class="group">
-                        <p id="btn" type="submit" class="button" value="Sign Up">Sign Up</p>
-                    </div>
-                    <div class="hr"></div>
-                    <div class="foot-lnk">
-                        <label for="tab-1">Already Member?</a>
-                        </div>
-                    </div>
-                </div>
-                         
+    <section class="login-form">
+        <h1>SIGN UP</h1>
+        <form action="">
+            <div class="int-area">
+                <input type="text" name="id" id="id"
+                autocomplete="off" required>
+                <label for="id">ID</label>
+            </div>
+            <div class="int-area">
+                <input type="text" name="name" id="name"
+                autocomplete="off" required>
+                <label for="name">USER NAME</label>
+            </div>
+            <div class="int-area">
+                <input type="password" name="psword" id="psword"
+                autocomplete="off" required>
+                <label for="psword">PASSWORD</label>
+            </div>
+            <div class="int-area">
+                <input type="password" name="psword" id="confirm-psword"
+                autocomplete="off" required>
+                <label for="psword">PASSWORD</label>
+            </div>
+            <div class="btn-area">
+                <button id = "btn"
+                type="submit">SING UP</button>
+
+            </div>
+        </form>
+        <div class="caption">
+            <a href="/login">Alreay ?</a>
         </div>
-    </div>
+    </section>
 </body>
 </html>
